--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "spdk-rs"
-description = "Rust bindings for SPDK library"
+name = "spdk-rs-internal"
+description = "SPDK library Rust internals"
 version = "0.1.0"
 edition = "2018"
 build = "build.rs"
@@ -12,23 +12,17 @@ authors = [
 ]
 
 [build-dependencies]
+build-helpers = { path = "./build-helpers" }
 bindgen = "0.68.1"
 cc = "1.0.83"
-pkg-config = "0.3.27"
 
 [dependencies]
 async-trait = "0.1.73"
 futures = "0.3.28"
 nix = "0.27.1"
 parking_lot = "0.12.1"
+serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
 snafu = "0.7.5"
 tracing = "0.1.37"
-
-[dependencies.serde]
-features = ["derive"]
-version = "1.0.188"
-
-[dependencies.uuid]
-features = ["v4"]
-version = "1.4"
+uuid = { version = "1.4", features = ["v4"] }
